# pnfl-gameplan

./: ARCHITECTURE.md  CHANGELOG.md  README.md  RULES.md  STATUS.md  pyproject.toml
src/pnfl_gameplan/: __init__.py  model.py  rules.py  validators.py
tests/: conftest.py  test_pnfl_gameplan.py  test_validators.py
